FALTANTES: - Botón Foto y código Tomar Foto - Botón Noticia y WebView - Formato y Diseño kk - Modificar SPLASH, logo y launcher

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,11 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
+        <activity
+            android:name=".Prefs"
+            android:label="Preferencias"
+            android:theme="@style/AppTheme">
+        </activity>
     </application>
 
 </manifest>
